added ui for education

--- a/services/ecoorbit-edu/finalUIscenario.html
+++ b/services/ecoorbit-edu/finalUIscenario.html
@@ -19,7 +19,7 @@
     header.app{display:flex;align-items:center;justify-content:space-between;gap:16px;margin-bottom:20px;padding:16px 18px;background:rgba(18,29,51,.65);border:1px solid var(--border);border-radius:16px;box-shadow:var(--shadow);backdrop-filter: blur(6px)}
     .brand{display:flex;align-items:center;gap:12px}
     .logo{font-size:36px}
-    .title{font-weight:800;font-size:22px;letter-spacing:.3px;background:linear-gradient(90deg,var(--accent),var(--accent-2));-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+    .title{font-weight:800;font-size:22px;letter-spacing:.3px;background:linear-gradient(90deg,var(--accent),var(--accent-2))}
     .sub{color:var(--muted);font-size:13px}
 
     .grid{display:grid;grid-template-columns:1.1fr .9fr;gap:20px}
