--- a/services/ecoorbit-edu/finalUIscenario.html
+++ b/services/ecoorbit-edu/finalUIscenario.html
@@ -96,7 +96,7 @@
       </div>
       <div class="chips" aria-live="polite">
         <span id="kpi-backend" class="chip skeleton" style="min-width:130px">&nbsp;</span>
-        <span id="kpi-gemini" class="chip skeleton" style="min-width:130px">&nbsp;</span>
+        <!-- <span id="kpi-gemini" class="chip skeleton" style="min-width:130px">&nbsp;</span> -->
       </div>
     </header>
 
